// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridList should correctly provide the style and className props in the children callback function 1`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell"
  />
</div>
`;

exports[`GridList should correctly provide the style and className props in the children callback function 2`] = `
<div
  class="md-grid boop"
  style="width: 500px; background: red;"
>
  <div
    class="md-cell cell-boop"
    style="background: blue; height: 50px;"
  />
</div>
`;

exports[`GridList should correctly update after props change 1`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell"
  />
</div>
`;

exports[`GridList should correctly update after props change 2`] = `
<div
  class="md-grid md-grid--stacked"
>
  <div
    class="md-cell"
  />
</div>
`;

exports[`GridList should correctly update after props change 3`] = `
<div
  class="md-grid test"
>
  <div
    class="md-cell"
  />
</div>
`;

exports[`GridList should correctly update after props change 4`] = `
<div
  class="md-grid md-grid--look-at-me"
>
  <div
    class="md-cell"
  />
</div>
`;

exports[`GridList should correctly update after props change 5`] = `
<div
  class="md-grid md-grid--no-spacing"
>
  <div
    class="md-cell"
  />
</div>
`;

exports[`GridList should correctly update after props change 6`] = `
<div
  class="md-grid md-grid--16-16"
>
  <div
    class="md-cell"
  />
</div>
`;

exports[`GridList should correctly update after props change 7`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell"
  />
</div>
`;

exports[`GridList should correctly update after props change 8`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--top"
  />
</div>
`;

exports[`GridList should correctly update after props change 9`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--middle"
  />
</div>
`;

exports[`GridList should correctly update after props change 10`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--bottom"
  />
</div>
`;

exports[`GridList should correctly update after props change 11`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--stretch"
  />
</div>
`;

exports[`GridList should correctly update after props change 12`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--center"
  />
</div>
`;

exports[`GridList should correctly update after props change 13`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--right"
  />
</div>
`;

exports[`GridList should correctly update after props change 14`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--5"
  />
</div>
`;

exports[`GridList should correctly update after props change 15`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--order-3"
  />
</div>
`;

exports[`GridList should correctly update after props change 16`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--1-offset"
  />
</div>
`;

exports[`GridList should correctly update after props change 17`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--1-phone"
  />
</div>
`;

exports[`GridList should correctly update after props change 18`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--1-phone-offset"
  />
</div>
`;

exports[`GridList should correctly update after props change 19`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--order-2-phone"
  />
</div>
`;

exports[`GridList should correctly update after props change 20`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--phone-hidden"
  />
</div>
`;

exports[`GridList should correctly update after props change 21`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--1-tablet"
  />
</div>
`;

exports[`GridList should correctly update after props change 22`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--1-tablet-offset"
  />
</div>
`;

exports[`GridList should correctly update after props change 23`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--order-2-tablet"
  />
</div>
`;

exports[`GridList should correctly update after props change 24`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--tablet-hidden"
  />
</div>
`;

exports[`GridList should correctly update after props change 25`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--1-desktop"
  />
</div>
`;

exports[`GridList should correctly update after props change 26`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--1-desktop-offset"
  />
</div>
`;

exports[`GridList should correctly update after props change 27`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--order-2-desktop"
  />
</div>
`;

exports[`GridList should correctly update after props change 28`] = `
<div
  class="md-grid"
>
  <div
    class="md-cell md-cell--desktop-hidden"
  />
</div>
`;

exports[`GridList should correctly update after props change 29`] = `
<div
  class="md-grid woop-woop"
>
  <div
    class="md-cell"
  />
</div>
`;

exports[`GridList should render correctly with the different props applied 1`] = `
<div
  className="md-grid md-grid--stacked"
  style={undefined}
/>
`;

exports[`GridList should render correctly with the different props applied 2`] = `
<div
  className="md-grid md-grid--stacked md-grid--no-spacing"
  style={undefined}
/>
`;

exports[`GridList should render correctly with the different props applied 3`] = `
<div
  className="md-grid md-grid--stacked md-grid--no-spacing md-grid--look-at-me"
  style={undefined}
/>
`;

exports[`GridList should render correctly with the different props applied 4`] = `
<div
  className="md-grid md-grid--48-16"
  style={undefined}
/>
`;

exports[`GridList should render correctly without any props 1`] = `
<div
  className="md-grid"
  style={undefined}
/>
`;

exports[`GridList should render correctly without any props 2`] = `
<div
  className="md-grid"
  style={undefined}
>
  <span
    className="md-cell"
    style={undefined}
  />
</div>
`;
